# SI190C

./: README.md
install/: local_setup.sh  setup.sh
install/coordination_publisher/lib/coordination_publisher/: gui_node
install/coordination_publisher/share/coordination_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/joint_comm_node/share/joint_comm_node/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/joint_kinematics_node/lib/joint_kinematics_node/: pose_publisher
install/joint_kinematics_node/share/joint_kinematics_node/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/my_robot/share/my_robot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_robot/share/my_robot/launch/: display.launch.py  pose.launch.py
install/my_robot/share/my_robot/meshes/: base.STL  (+3 more)
install/my_urdf_launch/share/my_urdf_launch/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
report/: report.aux  report.fdb_latexmk  report.fls  report.tex  report1.aux  report1.fdb_latexmk  report1.fls  report1.tex  report_Thu.aux  report_Thu.fdb_latexmk  report_Thu.fls  report_Thu.tex  report_for_camera_calibration.aux  report_for_camera_calibration.fdb_latexmk  report_for_camera_calibration.fls  report_for_camera_calibration.tex
src/: DH_Cali_TODO.m  task.py
src/coordination_publisher/: setup.cfg  setup.py
src/coordination_publisher/coordination_publisher/: gui_node.py
src/joint_comm_node/: CMakeLists.txt  package.xml
src/joint_comm_node/src/: joint_comm_node.cpp
src/joint_kinematics_node/: CMakeLists.txt
src/joint_kinematics_node/config/: dh_params.yaml
src/joint_kinematics_node/include/joint_kinematics_node/: DH_server.hpp  joint_kinematics_node.hpp
src/joint_kinematics_node/include/utility/: utility.hpp
src/joint_kinematics_node/launch/: kinematics_node.launch.py
src/joint_kinematics_node/src/: DH_server.cpp  joint_kinematics_node.cpp  utility.cpp
src/joint_kinematics_node/test/: pose_publisher.cpp
src/my_robot/: CMakeLists.txt  package.xml
src/my_robot/meshes/: joint2.STL  joint4.STL
(+5 files in other folders)
